Add gh-pages for easier deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -8,25 +8,32 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && git add dist -f && git commit -m 'deploy' && git subtree push --prefix dist origin gh-pages"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   },
-  "keywords": ["react", "invoice", "product-management", "camera"],
+  "keywords": [
+    "react",
+    "invoice",
+    "product-management",
+    "camera"
+  ],
   "author": "Zantech",
   "license": "MIT"
 }
